[package]
name = "sprs"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.7.0", features = ["llvm18-1"] }
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
logos = "0.15.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
[build-dependencies]
lalrpop = "0.22.2"
